feat: changing derived state function and adding support for prettier

--- a/devtools-extension/devtools.html
+++ b/devtools-extension/devtools.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <title>State Jet DevTools</title>
-  <script src="devtools.js"></script>
-</head>
+  <head>
+    <title>StateJet DevTools</title>
+    <script src="devtools.js"></script>
+  </head>
 </html>
